Implementacion de opciones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,15 @@
           <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Menú
           </a>
-          
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Ejercicio 1</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Ejercicio 2</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Ejercicio 3</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Ejercicio 4</a></li>
+          </ul>
         </li>
       </ul>
     </div>
