--- a/src/app/ejercicio3/ejercicio3.component.html
+++ b/src/app/ejercicio3/ejercicio3.component.html
@@ -1,1 +1,35 @@
-<p>ejercicio3 works!</p>
+<div class="card">
+    <div class="card-header">
+        <h1>Calcular promedio e indicar si está aprobado o desaprobado</h1>
+    </div>
+    <div class="card-body">
+        <div class="mb-3">
+            <label for="calificacion1" class="form-label">Calificación 1:</label>
+            <input type="number" class="form-control"
+            [(ngModel)]="calificaciones.calificacion1"
+            id="calificacion1" placeholder="Ingrese Calificación">
+          </div>
+        
+          <div class="mb-3">
+              <label for="calificacion2" class="form-label">Calificación 2:</label>
+              <input type="number" class="form-control"
+              [(ngModel)]="calificaciones.calificacion2"
+              id="calificacion2" placeholder="Ingrese Calificación">
+          </div>
+        
+          <div class="mb-3">
+              <label for="calificacion3" class="form-label">Calificación 3:</label>
+              <input type="number" class="form-control"
+              [(ngModel)]="calificaciones.calificacion3"
+              id="calificacion3" placeholder="Ingrese Calificación">
+          </div>
+          <hr />
+          <button type="button" (click)="calcularResultado()"
+          class="btn btn-primary">Primary</button>
+          @if (mostrarResultado) {
+            <div class="alet alert-primary" role="alert">
+                Su promedio es {{calificaciones.resultado}}. Usted está {{mensaje}}
+            </div>
+          }
+    </div>
+</div>
