--- a/src/app/ejercicio3/ejercicio3.component.html
+++ b/src/app/ejercicio3/ejercicio3.component.html
@@ -25,7 +25,7 @@
           </div>
           <hr />
           <button type="button" (click)="calcularResultado()"
-          class="btn btn-primary">Primary</button>
+          class="btn btn-primary">Calcular</button>
           @if (mostrarResultado) {
             <div class="alet alert-primary" role="alert">
                 Su promedio es {{calificaciones.resultado}}. Usted está {{mensaje}}
