Ejercicio 1 Completado con Rutas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
             Menú
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Ejercicio 1</a></li>
+            <li><a class="dropdown-item" href="ejercicio1">Ejercicio 1</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Ejercicio 2</a></li>
             <li><hr class="dropdown-divider"></li>
