--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Ejercicio 3</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="ejercicio4">Ejercicio 4</a></li>
+            <li><a class="dropdown-item" href="">Ejercicio 4</a></li>
           </ul>
         </li>
       </ul>
