Creación de componente ej2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="ejercicio1">Ejercicio 1</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Ejercicio 2</a></li>
+            <li><a class="dropdown-item" href="ejercicio2">Ejercicio 2</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/ejercicio3">Ejercicio 3</a></li>
             <li><hr class="dropdown-divider"></li>
